--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.8.0
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
+  flutter_dotenv: ^5.0.0
   get: ^4.6.6
 
 dev_dependencies:
@@ -69,6 +70,7 @@ flutter:
     - assets/images/app.png
     - assets/images/apple.png
     - assets/images/profile.png
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
